# mle-case

./: .gitignore  README.md  api.Dockerfile  pipeline.Dockerfile  pyproject.toml  train_and_serve.sh
src/property_pipeline_bain/: api.py  pipeline.py  test_pipeline.py
src/property_pipeline_bain/api/: main.py  models.py
src/property_pipeline_bain/pipeline/: data_loader.py  pipeline.py
