[project]
name = "property-pipeline-bain"
description = "A project for Bain MLE recruitment."
dynamic = ["version"]
readme = "README.md"
authors = [{ name = "Noel Viscome Eliezer", email = "noel.eliezer@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0,<3",
    "pandas>=2.0,<3",
    "scikit-learn>=1.0,<2",
    "category-encoders",
    "fastapi[standard]>=0.115,<1",
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["flit_core>=3.2.0"]
build-backend = "flit_core.buildapi"
